# rust-2024

./: .gitignore
http/axum-api/: Cargo.toml
http/axum-api/src/: handler.rs  main.rs  model.rs  response.rs
samples/estruturas_decisao/: Cargo.toml
samples/estruturas_decisao/src/: main.rs
samples/input/src/: main.rs
samples/polimorfismo/src/: main.rs
samples/variaveis1/src/: main.rs
samples/variaveis2/src/: main.rs
