[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
axum = "0.7.5"
axum-server = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tower-http = { version = "0.5.2", features = ["cors"] }
